# MLOps_GirafeAI_project_25f

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  dvc.yaml  infer.py  mkdocs.yml  params.yaml  pyproject.toml
.dvc/: config
conf/: config.yaml  export.yaml
conf/baseline/: default.yaml
conf/data/: default.yaml  thr03.yaml  thr03_dense.yaml
conf/eval/: dense.yaml  dense_hybrid_dense.yaml  test.yaml  test_hybrid_dense.yaml
conf/experiment/: baseline.yaml  baseline_dense.yaml  train.yaml  train_dense.yaml
conf/inference/: default.yaml
conf/mlflow/: default.yaml
conf/model/: early.yaml  hybrid.yaml
conf/trainer/: default.yaml
docs/: architecture.md  configuration.md  data-and-dvc.md  demo.md  evaluation.md  getting-started.md  index.md  inference.md  references.md  training.md
docs/assets/screenshots/: README.md
dvc/: params.yaml
scripts/: compile_tensorrt.sh  rebuild_fnspid_subset.py  stop_service.ps1  test_triton_inference.py  verify_experiment_config.py
src/stock_forecaster/: __init__.py  evaluate.py  evaluate_dense.py  export_onnx.py  export_utils.py  lightning_module.py  train.py
src/stock_forecaster/baseline/: __init__.py  features.py  fil_backend.py  metrics.py  train.py
src/stock_forecaster/data/: __init__.py  datamodule.py  dataset.py  download_data.py  inference_window.py  splits.py
src/stock_forecaster/models/: __init__.py  early_fusion_model.py  fusion.py  interfaces.py  multimodal_model.py  nlp_encoder.py  revin.py  ts_encoder.py
src/stock_forecaster/service/: app.py  fusion.py  historical.py  preprocess.py  routes_v1.py  triton_client.py
src/stock_forecaster/utils/: git_info.py  plotting.py  threshold_tuning.py
src/ui/: app.py
tests/: test_data_splits.py  test_dataset.py  test_fusion.py  test_historical_inference.py  test_multimodal_embedding.py  test_tabular_baseline.py  test_ts_encoder.py
triton_model_repo/multimodal_model_early/: config.pbtxt
