[project]
name = "stock-forecaster"
version = "0.1.0"
description = "Multimodal stock direction forecasting (FNSPID + iTransformer + FinBERT)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Evseev Ivan Alexandrovich" }]
dependencies = [
    "torch>=2.2.0",
    "pytorch-lightning>=2.4.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "mlflow>=2.14.0",
    "dvc[s3]>=3.50.0",
    "transformers>=4.41.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=16.0.0",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.9.0",
    "onnx>=1.16.0",
    "onnxruntime>=1.18.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "tritonclient[http]>=2.46.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "torchmetrics>=1.4.0",
    "datasets>=2.20.0",
    "huggingface-hub>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.7.0",
    "ruff>=0.5.0",
    "pytest>=8.2.0",
]
baseline = [
    "treelite>=4.3.0",
    "xgboost>=2.0.0",
]
ui = [
    "streamlit>=1.36.0",
    "plotly>=5.22.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "pymdown-extensions>=10.8",
]

[project.scripts]
stock-train = "stock_forecaster.train:main"
stock-export-onnx = "stock_forecaster.export_onnx:main"
stock-download-data = "stock_forecaster.data.download_data:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stock_forecaster"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "PL",
    "RUF",
]
ignore = ["PLR0913", "PLR2004", "PLR0912", "PLR0915"]

[tool.ruff.lint.per-file-ignores]
"src/ui/**/*.py" = ["RUF001"]

[tool.ruff.lint.isort]
known-first-party = ["stock_forecaster"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

# CUDA-enabled PyTorch on Windows/Linux (PyPI ships CPU-only wheels there by default).
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
